# partitionfinder

./: Makefile  pyproject.toml
partfinder/: alignment.py  analysis.py  analysis_method.py  config.py  database.py  dependencies.py  entropy.py  kmeans.py  main.py  model_loader.py  model_utils.py  morph_tiger.py  neighbour.py  parser.py  phyml.py  phyml_models.py  progress.py  raxml.py  raxml_models.py  reporter.py  results.py  scheme.py  setup.py  submodels.py  subset.py  subset_ops.py  threadpool.py  util.py
partfinder/partfinder.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_alignment.py  test_subset.py
tests/cfg/: test_configs.py
tests/christof/: test_christof.py
tests/clustering/: test_clustering.py
tests/morphology/tiger/: test_parse_to_rates.py
timings/: numpy_vs_set.py
